# Toy-Modal-SFT-and-RL-Library

./: AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: README.md  glossary.md  index.md  troubleshooting.md
docs/concepts/: clients_and_futures.md  modal_state_model.md  overview.md  paths_and_artifacts.md  safety_model.md  transports.md
docs/cookbook/: README.md  chat_sft.md  code_rl.md  math_rl.md  on_policy_rl_workflow.md  recipe_status.md  tiny_sft_workflow.md
docs/examples/: README.md  checkpoint_resume.py  common.py  cookbook_smoke.py  logprob_sampling.py  rest_metadata.py  rl_minimal.py  sampling_batch.py  sft_minimal.py  tutorial_parity.py
docs/getting_started/: installation.md  project_layout.md  quickstart.md
docs/guides/: checkpointing_and_resume.md  cookbook_recipes.md  deployment_to_modal.md  operations_and_cleanup.md  reinforcement_learning.md  sampling.md  supervised_finetuning.md
docs/recipes/: README.md  __init__.py  chat_sft.py  code_rl.py  common.py  eval_scaffold.py  harbor_rl.py  math_rl.py  model_distillation.py  multi_agent.py  on_policy_rl_workflow.py  preference_dpo.py  prompt_distillation.py  rl_basic.py  rl_loop.py  rubric_grading.py  sdft.py  sl_basic.py  sl_loop.py  tiny_sft_workflow.py  tool_use.py  true_thinking_score.py  verifier_environment.py  vlm_image_classification.py
docs/reference/: cli.md  cookbook_helpers.md  losses.md  sdk.md  types.md
docs/technical/: api_compatibility.md  cookbook.md  deployment.md  framework.md  peft_backend.md  sampling_and_rl.md  security.md  storage_and_operations.md  unsloth_backend.md
(+97 files in other folders)
